--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "~54.0.13",
     "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-linear-gradient": "~13.0.2",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.4.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-pager-view": "6.9.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0"
   },
   "private": true
