--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "~54.0.13",
+    "expo": "54.0.15",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
