--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-pager-view": "6.9.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0"
   },
