--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "expo start",
     "start:clear": "expo start --clear",
     "start:reset": "expo start --clear --reset-cache",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "expo prebuild --clean",
+    "android:studio": "adb reverse tcp:8081 tcp:8081 && echo ADB reverse port forwarding başarıyla kuruldu. Şimdi Metro bundler'ı başlatın: npm start",
+    "metro": "expo start --port 8081",
+    "build:android": "eas build --platform android --profile preview",
+    "build:android:local": "cd android && gradlew.bat assembleRelease",
+    "build:android:bundle": "cd android && gradlew.bat bundleRelease"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
@@ -18,12 +25,13 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "54.0.21",
-    "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~17.0.8",
+    "expo": "54.0.22",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
+    "expo-device": "^8.0.9",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -36,5 +44,9 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
