--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "54.0.22",
+    "expo-auth-session": "^7.0.8",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
     "expo-device": "^8.0.9",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "^8.0.8",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -42,6 +45,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0"
   },
   "private": true,
