--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
     "android:studio": "adb reverse tcp:8081 tcp:8081 && echo ADB reverse port forwarding başarıyla kuruldu. Şimdi Metro bundler'ı başlatın: npm start",
-    "metro": "expo start --port 8081",
     "build:android": "eas build --platform android --profile preview",
-    "build:android:local": "cd android && gradlew.bat assembleRelease",
-    "build:android:bundle": "cd android && gradlew.bat bundleRelease"
+    "build:android:dev": "eas build --platform android --profile development",
+    "build:android:local": "npx expo export:embed && cd android && gradlew.bat assembleRelease",
+    "build:android:bundle": "npx expo export:embed && cd android && gradlew.bat bundleRelease",
+    "build:android:local:full": "npx expo export:embed && cd android && gradlew.bat clean && gradlew.bat assembleRelease"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
@@ -25,10 +26,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "54.0.22",
+    "expo": "54.0.23",
     "expo-auth-session": "^7.0.8",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.17",
     "expo-device": "^8.0.9",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
@@ -41,12 +43,15 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "^4.1.5",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "private": true,
   "devDependencies": {
