--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,67 +1,80 @@
 workflows:
-  android-workflow:
-    name: Android Build
+  android-release:
+    name: Android Release Build
     max_build_duration: 120
     instance_type: mac_mini_m1
     environment:
       groups:
-        - keystore_credentials # Android keystore için
+        - app_credentials # Codemagic UI'da oluşturmanız gerekecek
       vars:
+        # Environment variables - app.config.js'de kullanılan değişkenler
         EXPO_PUBLIC_SUPABASE_URL: $EXPO_PUBLIC_SUPABASE_URL
         EXPO_PUBLIC_SUPABASE_ANON_KEY: $EXPO_PUBLIC_SUPABASE_ANON_KEY
         EXPO_PUBLIC_EXPO_PUSH_API_URL: $EXPO_PUBLIC_EXPO_PUSH_API_URL
         EXPO_PUBLIC_S3_STORAGE_URL: $EXPO_PUBLIC_S3_STORAGE_URL
         EXPO_PUBLIC_GOOGLE_CLIENT_ID: $EXPO_PUBLIC_GOOGLE_CLIENT_ID
-      node: 20.18.0
-      npm: 10.8.2
+        
+        # Android Signing - Production keystore için
+        # Keystore dosyasını base64 encode edip buraya ekleyin
+        CM_KEYSTORE_PATH: $CM_KEYSTORE_PATH
+        CM_KEYSTORE_PASSWORD: $CM_KEYSTORE_PASSWORD
+        CM_KEY_ALIAS: $CM_KEY_ALIAS
+        CM_KEY_PASSWORD: $CM_KEY_PASSWORD
+      node: 20.11.0
+      npm: 10.2.4
       java: 17
     scripts:
       - name: Install dependencies
         script: |
           npm ci
-      - name: Install Expo CLI
-        script: |
-          npm install -g @expo/cli
-      - name: Prebuild Android
+      
+      - name: Prebuild Android (if needed)
         script: |
           npx expo prebuild --platform android --clean
+      
       - name: Setup Android keystore
         script: |
-          if [ -z "$CM_KEYSTORE_PATH" ]; then
-            echo "Keystore credentials not found. Creating debug keystore..."
-            mkdir -p android/app
-            keytool -genkeypair -v -storetype PKCS12 -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+          # Production keystore'u environment variable'dan al
+          if [ -n "$CM_KEYSTORE" ]; then
+            echo "$CM_KEYSTORE" | base64 --decode > android/app/release.keystore
+            # gradle.properties'e signing bilgilerini ekle
+            echo "MYAPP_RELEASE_STORE_FILE=release.keystore" >> android/gradle.properties
+            echo "MYAPP_RELEASE_STORE_PASSWORD=$CM_KEYSTORE_PASSWORD" >> android/gradle.properties
+            echo "MYAPP_RELEASE_KEY_ALIAS=$CM_KEY_ALIAS" >> android/gradle.properties
+            echo "MYAPP_RELEASE_KEY_PASSWORD=$CM_KEY_PASSWORD" >> android/gradle.properties
           else
-            echo "Using provided keystore..."
-            cp $CM_KEYSTORE_PATH android/app/my-release-key.keystore
-            echo "$CM_KEYSTORE_PASSWORD" > android/app/keystore-password.txt
-            echo "$CM_KEYSTORE_ALIAS" > android/app/keystore-alias.txt
+            echo "⚠️ Production keystore bulunamadı, debug keystore kullanılacak"
           fi
+      
       - name: Build Android APK
         script: |
           cd android
-          chmod +x ./gradlew
+          ./gradlew clean
           ./gradlew assembleRelease
-          cd ..
-      - name: Build Android AAB
+      
+      - name: Build Android AAB (App Bundle)
         script: |
           cd android
           ./gradlew bundleRelease
-          cd ..
     artifacts:
       - android/app/build/outputs/apk/release/*.apk
       - android/app/build/outputs/bundle/release/*.aab
     publishing:
       email:
         recipients:
-          - your-email@example.com
+          - your-email@example.com # Kendi email adresinizle değiştirin
         notify:
           success: true
-          failure: false
+          failure: true
+      scripts:
+        - name: Upload to Codemagic
+          script: |
+            echo "Build başarıyla tamamlandı!"
+            echo "APK ve AAB dosyaları artifacts bölümünde mevcut."
 
   android-debug:
     name: Android Debug Build
-    max_build_duration: 120
+    max_build_duration: 60
     instance_type: mac_mini_m1
     environment:
       vars:
@@ -70,25 +83,23 @@ workflows:
         EXPO_PUBLIC_EXPO_PUSH_API_URL: $EXPO_PUBLIC_EXPO_PUSH_API_URL
         EXPO_PUBLIC_S3_STORAGE_URL: $EXPO_PUBLIC_S3_STORAGE_URL
         EXPO_PUBLIC_GOOGLE_CLIENT_ID: $EXPO_PUBLIC_GOOGLE_CLIENT_ID
-      node: 20.18.0
-      npm: 10.8.2
+      node: 20.11.0
+      npm: 10.2.4
       java: 17
     scripts:
       - name: Install dependencies
         script: |
           npm ci
-      - name: Install Expo CLI
-        script: |
-          npm install -g @expo/cli
+      
       - name: Prebuild Android
         script: |
           npx expo prebuild --platform android --clean
+      
       - name: Build Android Debug APK
         script: |
           cd android
-          chmod +x ./gradlew
+          ./gradlew clean
           ./gradlew assembleDebug
-          cd ..
     artifacts:
       - android/app/build/outputs/apk/debug/*.apk
     publishing:
@@ -97,74 +108,5 @@ workflows:
           - your-email@example.com
         notify:
           success: true
-          failure: false
+          failure: true
 
-  ios-workflow:
-    name: iOS Build
-    max_build_duration: 120
-    instance_type: mac_mini_m1
-    environment:
-      groups:
-        - app_store_credentials # iOS için App Store credentials
-      vars:
-        EXPO_PUBLIC_SUPABASE_URL: $EXPO_PUBLIC_SUPABASE_URL
-        EXPO_PUBLIC_SUPABASE_ANON_KEY: $EXPO_PUBLIC_SUPABASE_ANON_KEY
-        EXPO_PUBLIC_EXPO_PUSH_API_URL: $EXPO_PUBLIC_EXPO_PUSH_API_URL
-        EXPO_PUBLIC_S3_STORAGE_URL: $EXPO_PUBLIC_S3_STORAGE_URL
-        EXPO_PUBLIC_GOOGLE_CLIENT_ID: $EXPO_PUBLIC_GOOGLE_CLIENT_ID
-      node: 20.18.0
-      npm: 10.8.2
-      xcode: latest
-      cocoapods: default
-    scripts:
-      - name: Install dependencies
-        script: |
-          npm ci
-      - name: Install Expo CLI
-        script: |
-          npm install -g @expo/cli
-      - name: Prebuild iOS
-        script: |
-          npx expo prebuild --platform ios --clean
-      - name: Install CocoaPods dependencies
-        script: |
-          cd ios
-          pod install
-          cd ..
-      - name: Set up code signing settings
-        script: |
-          xcode-project use-profiles
-      - name: Build iOS
-        script: |
-          xcodebuild build \
-            -workspace ios/*.xcworkspace \
-            -scheme expo-app \
-            -configuration Release \
-            -destination generic/platform=iOS \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
-      - name: Build iOS IPA
-        script: |
-          xcodebuild archive \
-            -workspace ios/*.xcworkspace \
-            -scheme expo-app \
-            -configuration Release \
-            -archivePath build/ios/exp-app.xcarchive \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO
-          xcodebuild -exportArchive \
-            -archivePath build/ios/exp-app.xcarchive \
-            -exportPath build/ios/ipa \
-            -exportOptionsPlist ios/ExportOptions.plist \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO
-    artifacts:
-      - build/ios/ipa/*.ipa
-    publishing:
-      email:
-        recipients:
-          - your-email@example.com
-        notify:
-          success: true
-          failure: false
