--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
     "android:studio": "adb reverse tcp:8081 tcp:8081 && echo ADB reverse port forwarding başarıyla kuruldu. Şimdi Metro bundler'ı başlatın: npm start",
+    "metro": "expo start --port 8081",
     "build:android": "eas build --platform android --profile preview",
     "build:android:dev": "eas build --platform android --profile development",
     "build:android:local": "npx expo export:embed && cd android && gradlew.bat assembleRelease",
@@ -22,6 +23,7 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
