--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@sentry/react-native": "^7.6.0",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "54.0.23",
     "expo-auth-session": "^7.0.8",
@@ -57,6 +58,7 @@
   "private": true,
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "sharp": "^0.34.5",
     "typescript": "~5.9.2"
   }
 }
