Google Play yayÄ±nlama iÃ§in production build yapÄ±landÄ±rmasÄ±: AAB formatÄ±, versionCode, lokal build scripti

--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "android:studio": "adb reverse tcp:8081 tcp:8081 && echo ADB reverse port forwarding başarıyla kuruldu. Şimdi Metro bundler'ı başlatın: npm start",
     "build:android": "eas build --platform android --profile preview",
     "build:android:dev": "eas build --platform android --profile development",
-    "build:android:local": "npx expo export:embed && cd android && gradlew.bat assembleRelease",
-    "build:android:bundle": "npx expo export:embed && cd android && gradlew.bat bundleRelease",
-    "build:android:local:full": "npx expo export:embed && cd android && gradlew.bat clean && gradlew.bat assembleRelease",
+    "build:android:local": "npx expo export:embed --platform android && cd android && gradlew.bat assembleRelease",
+    "build:android:bundle": "npx expo export:embed --platform android && cd android && gradlew.bat bundleRelease",
+    "build:android:local:full": "npx expo export:embed --platform android && cd android && gradlew.bat clean && gradlew.bat assembleRelease",
+    "build:android:production": "npx expo prebuild --platform android --clean && cd android && gradlew.bat clean && gradlew.bat bundleRelease",
     "build:ios": "eas build --platform ios --profile preview",
     "build:ios:dev": "eas build --platform ios --profile development",
     "build:ios:prod": "eas build --platform ios --profile production",
