Android production build script dÃ¼zeltmeleri: gradle plugin yÃ¼kleme ve no-clean seÃ§eneÄŸi eklendi

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build:android:local": "npx expo export:embed --platform android && cd android && gradlew.bat assembleRelease",
     "build:android:bundle": "npx expo export:embed --platform android && cd android && gradlew.bat bundleRelease",
     "build:android:local:full": "npx expo export:embed --platform android && cd android && gradlew.bat clean && gradlew.bat assembleRelease",
-    "build:android:production": "npx expo prebuild --platform android --clean && cd android && gradlew.bat clean && gradlew.bat bundleRelease",
+    "prebuild:android": "npx expo prebuild --platform android --clean",
+    "build:android:production": "npm run prebuild:android && cd android && gradlew.bat --stop && gradlew.bat tasks --all >nul 2>&1 && gradlew.bat clean && gradlew.bat bundleRelease",
+    "build:android:production:no-clean": "npx expo prebuild --platform android && cd android && gradlew.bat bundleRelease",
     "build:ios": "eas build --platform ios --profile preview",
     "build:ios:dev": "eas build --platform ios --profile development",
     "build:ios:prod": "eas build --platform ios --profile production",
