Paket adını com.ilkcoffee.app olarak güncelle - Google Play uyumluluğu için

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ expo-env.d.ts
 .kotlin/
 *.orig.*
 *.jks
-*.keystore
 *.p8
 *.p12
 *.key
@@ -66,6 +65,8 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+*.keystore
+android/app/release.keystore
 
 # Metro
 .metro-health-check*
