--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
     "android:studio": "adb reverse tcp:8081 tcp:8081 && echo ADB reverse port forwarding başarıyla kuruldu. Şimdi Metro bundler'ı başlatın: npm start",
-    "build:android": "eas build --platform android --profile preview",
-    "build:android:dev": "eas build --platform android --profile development",
-    "build:android:local": "npx expo export:embed --platform android && cd android && gradlew.bat assembleRelease",
-    "build:android:bundle": "npx expo export:embed --platform android && cd android && gradlew.bat bundleRelease",
-    "build:android:local:full": "npx expo export:embed --platform android && cd android && gradlew.bat clean && gradlew.bat assembleRelease",
-    "prebuild:android": "npx expo prebuild --platform android --clean",
-    "build:android:production": "npm run prebuild:android && cd android && gradlew.bat --stop && gradlew.bat tasks --all >nul 2>&1 && gradlew.bat clean && gradlew.bat bundleRelease",
-    "build:android:production:no-clean": "npx expo prebuild --platform android && cd android && gradlew.bat bundleRelease",
+    "build:android:local:apk": "android\\gradlew.bat -p android assembleRelease",
+    "build:android:local:aab": "android\\gradlew.bat -p android bundleRelease",
+    "build:android:local:clean": "android\\gradlew.bat -p android clean && android\\gradlew.bat -p android assembleRelease",
+    "build:android:local:aab:clean": "android\\gradlew.bat -p android clean && android\\gradlew.bat -p android bundleRelease",
     "build:ios": "eas build --platform ios --profile preview",
     "build:ios:dev": "eas build --platform ios --profile development",
     "build:ios:prod": "eas build --platform ios --profile production",
