--- a/eas.json
+++ b/eas.json
@@ -26,7 +26,7 @@
     },
     "production": {
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "aab"
       },
       "ios": {
         "simulator": false,
