--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -65,7 +65,10 @@ expo.useLegacyPackaging=false
 expo.edgeToEdgeEnabled=true
 
 # Release Keystore Configuration
+# Şifreler güvenlik nedeniyle environment variable veya gradle.properties.local dosyasında tutulmalıdır
+# gradle.properties.local dosyası .gitignore'da olduğu için git'e commit edilmeyecektir
 MYAPP_RELEASE_STORE_FILE=release.keystore
 MYAPP_RELEASE_KEY_ALIAS=release-key
-MYAPP_RELEASE_STORE_PASSWORD=Ae006129
-MYAPP_RELEASE_KEY_PASSWORD=Ae006129
+# MYAPP_RELEASE_STORE_PASSWORD ve MYAPP_RELEASE_KEY_PASSWORD environment variable veya gradle.properties.local'den alınmalıdır
+# Örnek: export MYAPP_RELEASE_STORE_PASSWORD=your_password
+# Veya android/gradle.properties.local dosyası oluşturun (gitignore'da)
