--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,18 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+// Load gradle.properties.local if it exists
+def localPropertiesFile = rootProject.file("gradle.properties.local")
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        def properties = new Properties()
+        properties.load(stream)
+        properties.each { key, value ->
+            project.ext[key] = value
+        }
+    }
+}
+
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
 /**
@@ -92,8 +104,8 @@ android {
         applicationId 'com.ilkcoffee.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
